--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
+<html lang="zh-tw">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
+    <link rel="icon" href="">
+    <!--載入網頁左上角小圖示-->
+    <meta name="description" content="">
+    <!--網站描述文字-->
+    <meta name="keywords" content="">
+    <!--網站關鍵字-->
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <!--FB資訊-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <!--normalize CSS Reset CSS-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!--載入fontawesome.-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- 載入BS5 -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <!--載入google字體-->
+    <link rel="stylesheet" href="css/all.css">
+    <!--將CSS檔案import進來-->
 </head>
 
 <body>
+
     <div class="container">
         <div id="app" class="container">
             <table class="table mt-4">
@@ -31,19 +52,33 @@
                     </tr>
                 </thead>
                 <tbody id="productList">
-
+                    <!-- <tr>
+                        <td>範例標題</td>
+                        <td width="120">
+                            範例原價
+                        </td>
+                        <td width="120">
+                            範例價格
+                        </td>
+                        <td width="100">
+                            <span class="">範例啟用狀態</span>
+                        </td>
+                        <td width="120">
+                            <button type="button" class="btn btn-sm btn-outline-danger move deleteBtn"
+                                data-action="remove" data-id=""> 刪除 </button>
+                        </td>
+                    </tr> -->
                 </tbody>
             </table>
             <p>目前有 <span id="productCount">0</span> 項產品</p>
         </div>
     </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
-        integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
-        crossorigin='anonymous'></script>
-    <script src="product.js"></script>
-    <script>
 
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="js/all.js"></script>
+    <!--將js檔案import進來-->
 </body>
 
 </html>
